--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.2.9",
     "i": "^0.3.6",
     "react": "^17.0.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
@@ -40,7 +41,8 @@
       "last 1 safari version"
     ],
     "terminal.integrated.shellArgs.windows": [
-      "-ExecutionPolicy", "Bypass"]
+      "-ExecutionPolicy",
+      "Bypass"
+    ]
   }
-  
 }
